cabal-version: 3.4

name: VulkanSandbox
version: 0.1.0.0
synopsis: A sandbox for tinkering with Vulkan.
license: MIT
license-file: LICENSE
author: Matthew Stewart
maintainer: m.scott.stewart@gmail.com
category: Graphics
build-type: Simple

flag ndebug
  Description: Disables debugging.
  Default: False

common common
  hs-source-dirs: src
  ghc-options: -threaded -Wall -Wno-name-shadowing -Wno-unused-matches -fno-ignore-asserts
  default-language: GHC2021
  build-depends:
    clock,
    exceptions,
    extra,
    GLFW-b,
    kan-extensions,
    mtl >= 2.3.1,
    vulkan-raw,
    base

executable VulkanSandbox
  import: common
  main-is: VulkanSandbox.hs
  other-modules:
    ApplicationException
    Local.Foreign.Marshal.Alloc
    Local.Foreign.Ptr
    Local.Foreign.Storable.Offset
    Local.Graphics.UI.GLFW
    Local.Prelude
    MarshalAs
    ScopedResource
    Vulkan.Auxiliary
    Vulkan.Auxiliary.Core
    Vulkan.Auxiliary.Instance
    Vulkan.Auxiliary.Exception
    Vulkan.Auxiliary.Ext.VK_EXT_debug_report
